kafka/base/dedup-dotnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-dedup-dotnet
  namespace: kafka
  labels:
    app: kafka-dedup-dotnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-dedup-dotnet
  template:
    metadata:
      labels:
        app: kafka-dedup-dotnet
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: kafka-dedup-dotnet
        image: registry.flou.dev/kafka-dedup-dotnet:0052ea2e-a8d0-4c0a-b8ba-d47e834e200c
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
