kafka/base/kafka-dedup-dotnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-dedup-dotnet
  namespace: kafka
  labels:
    app: kafka-dedup-dotnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-dedup-dotnet
  template:
    metadata:
      labels:
        app: kafka-dedup-dotnet
    spec:
      imagePullSecrets:
        - name: harbor
      containers:
      - name: kafka-dedup-dotnet
        image: harbor.flou.dev/coflnet/kafka-dedup-dotnet:25b6a8c0-1a7b-4c91-b31e-3f60bdcfa573
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
