kafka/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  labels:
    name: kafka-ingress
spec:
  rules:
  - host: kafka.flou.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kafka-helm
            port: 
              number: 9092
